Fix height issue on EventCard on mobile

--- a/src/components/EventCard/EventCard.module.scss
+++ b/src/components/EventCard/EventCard.module.scss
@@ -12,14 +12,11 @@ $dateOffset: 20px;
   flex: none;
   position: relative;
   padding: between(26px, 40px, $sm, $xlg) between(20px, 30px, $sm, $xlg);
+  height: 512px;
 
   @include respond-to(onlySmall) {
-    width: 275px;
+    width: 80%;
     padding: 40px 30px;
-  }
-
-  @include respond-to(md) {
-    height: 512px;
   }
 
   &::after {
